--- a/index.html
+++ b/index.html
@@ -146,16 +146,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="car-text">
 							<h5>Weekend service</h5>
-							<p>You can hire an english speaking driver for a full day during the weekend or any week day</p>
+							<p>You can hire a car and driver for 1 or 2 days Special rates for Friday Saturday and Sunday or Saturday Sunday Monday (3 days)</p>
 								
 							</div>
 						</div>
 						<div class="welcome-bottom-grid-right">
 							<div class="car-text">
 								<h5>Transfers</h5>
-								<p>I offer pickup anywhere on Bali and you can get anywhere you like.</p>
-								<p>Options for a group - a 7 seater car.</p>
-								<p>Options for a family - 5 seater.</p>
+								<p>We offer a pick up and delivery service from the airport to your villa or hotel anywhere in Bali day to night.  We have 5 person and 7 person vehicles available at competitive rates.</p>
 						</div>
 						<div class="welcome-bottom-grid-left-g">
 							<img src="images/9.jpg" alt=" " class="img-responsive" />
